infra/k8s/dashboard-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard
  template:
    metadata:
      labels:
        app: dashboard
    spec:
      containers:
      - name: dashboard
        image: krniya/dashboard
        resources:
          limits:
            memory: "1024Mi"
            cpu: "500m"
        ports:
        - containerPort: 3001


---

apiVersion: v1
kind: Service
metadata:
  name: dashboard-srv
spec:
  selector:
    app: dashboard
  ports:
  - name: dashboard
    protocol: TCP
    port: 3001
    targetPort: 3001
