infra/k8s/folder-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: folder-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: folder-mongo
  template:
    metadata:
      labels:
        app: folder-mongo
    spec:
      containers:
      - name: folder-mongo
        image: mongo
        resources:
          limits:
            memory: "1024Mi"
            cpu: "500m"
        volumeMounts:
        - name: mongodb-storage
          mountPath: /data/db
    volumes:
    - name: mongodb-storage
      persistentVolumeClaim:
        claimName: folder-persistent-volume-claim

---

apiVersion: v1
kind: Service
metadata:
  name: folder-mongo-srv
spec:
  selector:
    app: folder-mongo
  ports:
  - name: db
    protocol: TCP
    port: 27017
    targetPort: 27017
