infra/k8s/workspace-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workspace-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: workspace
  template:
    metadata:
      labels:
        app: workspace
    spec:
      containers:
      - name: workspace
        image: krniya/not-workspace
        resources:
          limits:
            memory: "1024Mi"
            cpu: "500m"
        ports:
        - containerPort: 3001


---

apiVersion: v1
kind: Service
metadata:
  name: workspace-srv
spec:
  selector:
    app: workspace
  ports:
  - name: workspace
    protocol: TCP
    port: 3001
    targetPort: 3001
