infra/k8s/workspace-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workspace-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: workspace-mongo
  template:
    metadata:
      labels:
        app: workspace-mongo
    spec:
      containers:
      - name: workspace-mongo
        image: mongo
        resources:
          limits:
            memory: "1024Mi"
            cpu: "500m"
        volumeMounts:
        - name: mongodb-storage
          mountPath: /data/db
    volumes:
    - name: mongodb-storage
      persistentVolumeClaim:
        claimName: workspace-persistent-volume-claim

---

apiVersion: v1
kind: Service
metadata:
  name: workspace-mongo-srv
spec:
  selector:
    app: workspace-mongo
  ports:
  - name: db
    protocol: TCP
    port: 27017
    targetPort: 27017
