infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  labels:
    name: ingress-srv
  annotations: 
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
  - host: mynotion.io
    http:
      paths:
      - pathType: ImplementationSpecific
        path: "/api/users/?(.*)"
        backend:
          service:
            name: auth-srv
            port: 
              number: 3000
      - pathType: ImplementationSpecific
        path: "/api/dashboard/?(.*)"
        backend:
          service:
            name: dashboard-srv
            port: 
              number: 3001
      - pathType: ImplementationSpecific
        path: "/?(.*)"
        backend:
          service:
            name: client-srv
            port: 
              number: 3000
